[package]
name = "walkers"
version = "0.7.0"
repository = "https://github.com/podusowski/walkers"
description = "slippy map widget for egui"
keywords = ["gis", "geography", "gui"]
categories = ["gui", "science::geo"]
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "1"
log = "0.4"
egui = "0.23"
egui_extras = { version = "0.23", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
geo-types = { version = "0.7" }
ehttp = "0.3.1"

[dev-dependencies]
eframe = "0.23"
env_logger = "0.10"
approx = "0.5"
